--- a/style1.css
+++ b/style1.css
@@ -1,177 +1,23 @@
-* {
-    margin: 10px;
-    padding: 10px;
-    box-sizing: border-box;
-}
 
 body { 
-    margin: 0 auto;
-    min-height: 100vh;
-}
 
-.container {
-max-width: 1024px;
-margin: 0 auto;
-}
-
-header {
-    position: relative;
-    top: 0;
-    padding: 1rem;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 2px 2px blueviolet;
-    background-color: orange;
-    z-index: 100;
-}
-/*https: //www.digitalocean.com/community/tutorials/css-z-index*/
-/*Forgetting to apply a position rule will effectively ignore the z-index rule (e.g.) position {absolute, relative, fixed, static }*/ 
-
-nav {
-    position:relative;
-    width: 100vw;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgba(1, 227, 248, 0.959);
-    padding: 10px;
-    border-radius: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-nav ul {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-nav a {
-    display: flex;
-    padding: 10px 20px;
-    background-color: yellow;
-    color: red;
-    text-decoration: none;
-    border-radius: 0;
-    border: none;
-    margin: 0;
-    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
-}
-
-nav a:hover {
-    background-color: red;
-    color: white;
-}
-
-.horizontal-nav a {
-    color: red;
-    font-size: large;
-    font-weight: bold;
+    background-image: url("https://images.unsplash.com/photo-1517245386807-9b4d0dd9c9e1?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=3b2b2b2b2b2b2b2b2b2b2b2b2b2b2b2&auto=format&fit=crop&w=1350&q=80");
+    background-size: cover;
+    background-position: center;
+    text-align:justify;
+    color:yellow;
+    font-size: 18px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    border-radius: 5px;
-    border-width: 5px;
-    border-color: blue;
-    text-align: center;
-    margin-top: 3px;
-    margin-bottom: 3px;
-    display: flex;
-    flex-direction: row;
-}
-
-.horizontal-nav a:hover {
-    background-color: yellow;
-    color: red;
-}
-
-ul, 
-li {
-    margin: 2px;
-    padding: 2px;
-    list-style: none;
-    display: inline;
-}
-
-body {
-    background-color: yellow;
-    animation: color-change 25s ease-in-out infinite;
-}    
-
-
-@media screen and (max-width: 1024px) and (min-width: 1024px)
-
-{           }
-
-@keyframes animation-name {
-    0% {
-        background-color: rgba(96, 252, 94, 0.37);
-    }
-
-    33% {
-        background-color: rgba(96, 252, 94, 0.37);
-    }
-
-    66% {
-        background-color: rgba(7, 136, 4, 0.805);
-    }
-
-    100% {
-        background-color: greenyellow;
-    }
-}
-
-h1, 
-h2 {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 30px;
+    line-height: 25px;
+    margin-left: 30px;
+    margin-right: 30px;
     font-style: italic;
     font-weight: bold;
-    color: blue;
+}
+
+h1, h2 {
+    font-size: 44px;
+    color:red;
     text-align: center;
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-/* video section */
-
-video-container {
-    display: flex;
-    justify-content: space-between;
-    
-}
-
-video-clip {
-    width: 200px;
-    height: 250px;
-}
-.video-item {
-    width: 20%;
-    margin: 5px;
-    justify-content: space-evenly;
-}
-
-.video-item iframe {
-    width: 100%;
-}
-
-.video-container div {
-    margin: 5px;
-}
-
-.video-description {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 16px;
     font-style: italic;
-    font-weight: bold;
-    color: bisque;
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 10px;
 }
-
-/* images section */
